objects/CameleonCPQ__QxQuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Cost_Extended__c</fullName>
        <label>Net Cost Extended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Cost__c</fullName>
        <label>Net Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pack_Qty__c</fullName>
        <label>Pack Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Hold__c</fullName>
        <label>Price Hold</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Origin_Id__c</fullName>
        <label>Price Origin Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Origin__c</fullName>
        <label>Pricing Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Type__c</fullName>
        <label>Pricing Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Label</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prod_Id__c</fullName>
        <label>Prod Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Extended__c</fullName>
        <label>Proposed Extended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed__c</fullName>
        <label>Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pushed_to_CPT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed to CPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Agreement</label>
        <referenceTo>PROS_Agreement__c</referenceTo>
        <relationshipLabel>Rebates</relationshipLabel>
        <relationshipName>PROS_Quote_Rebate_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Amt__c</fullName>
        <label>Rebate $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Category__c</fullName>
        <label>Rebate Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Department__c</fullName>
        <label>Rebate Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Estimated_Impact_Tiered__c</fullName>
        <label>Rebate Estimated Impact Tiered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Estimated_Impact__c</fullName>
        <label>Rebate Estimated Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Inherited_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inherited Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate_Notes__c</fullName>
        <label>Rebate Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebate_Payment_Date__c</fullName>
        <label>Rebate Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Perc__c</fullName>
        <label>Rebate %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rebate_Qty__c</fullName>
        <label>Rebate Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rebate Quote</label>
        <referenceTo>CameleonCPQ__QxQuote__c</referenceTo>
        <relationshipLabel>Rebates</relationshipLabel>
        <relationshipName>Rebates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebate_Tier_1_Vol__c</fullName>
        <label>Rebate Tier 1 Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Tier_1__c</fullName>
        <label>Rebate Tier 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Tier_2_Vol__c</fullName>
        <label>Rebate Tier 2 Vol</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Tier_2__c</fullName>
        <label>Rebate Tier 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Total_Spend__c</fullName>
        <label>Rebate Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Value__c</fullName>
        <formula>IF(Rebate_Amt__c &gt; 0,&apos;$&apos; + TEXT(ROUND(Rebate_Amt__c,2)) ,IF(Rebate_Perc__c&gt;0,TEXT(ROUND(Rebate_Perc__c*100,2)) + &apos;%&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate %/$</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <label>Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Assortment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standard Assortment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_Proposed__c</fullName>
        <label>Final Proposed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sync_SKU__c</fullName>
        <label>Sync SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TDC_Extended__c</fullName>
        <label>TDC Extended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TDC__c</fullName>
        <label>TDC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_Count__c</fullName>
        <label>Count of SKU violations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Violation_Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Violation_Requirement__c</fullName>
        <label>Requirement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Violation_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web__c</fullName>
        <label>Web</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yield_Reference__c</fullName>
        <label>Yield Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PROS Quote Line</label>
    <nameField>
        <label>Item Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Quote Lines</pluralLabel>
    <recordTypes>
        <fullName>CPT</fullName>
        <active>true</active>
        <label>CPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Compliance_Violation</fullName>
        <active>true</active>
        <label>Compliance Violation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Executive_Summary</fullName>
        <active>true</active>
        <label>Executive Summary</label>
    </recordTypes>
    <recordTypes>
        <fullName>InheritedCPT</fullName>
        <active>true</active>
        <label>InheritedCPT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate</fullName>
        <active>true</active>
        <label>Rebate</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>